# ShaderToy2CPP

./: .gitignore  CMakeLists.txt
bin64/: vert.glsl
bin64/shaders/: LaplaceA.glsl  NormalDisplay.glsl  WavesA.glsl_error.txt  WavesM.glsl  WavesM.glsl_error.txt  Wolf.glsl  Wolf.glsl_error.txt  test.glsl
bin64/textures/: Grass.glsl  GrassNoise.glsl  GrassSprite.cpp  GrassSprite.h  wolf_w.rar
src/: CMakeLists.txt  Main.cpp  Renderer.cpp  Renderer.h  Res.cpp  Res.h  Resource.rc  Resources.cpp  Resources.h  Shaders.cpp  Shaders.h
